--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
 
     <color name="press_button_color">#19000000</color>
 
-    <color name="actionbar_bg_color">#ECECEC</color>
+    <color name="actionbar_bg_color">#FAFAFA</color>
 
     <color name="text_color_grey">#9b9b9b</color>
 
