--- a/app/src/main/res/layout/activity_deal.xml
+++ b/app/src/main/res/layout/activity_deal.xml
@@ -12,7 +12,8 @@
         app:dividerMargin="15dp"
         app:indicatorColor="@color/tab_indicator_color"
         app:indicatorHeight="2dp"
-        app:showIndicator="true"/>
+        app:showIndicator="true"
+        android:background="@color/actionbar_bg_color"/>
 
     <android.support.v4.view.ViewPager
         android:layout_below="@+id/id_tab"
