--- a/app/src/main/res/layout/menu_login_item.xml
+++ b/app/src/main/res/layout/menu_login_item.xml
@@ -13,22 +13,23 @@
         android:orientation="vertical"
         android:visibility="gone">
         <TextView
-            android:id="@+id/menu_tv"
+            android:id="@+id/menu_account_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="159****1234"/>
         <TextView
-            android:id="@+id/menu_content"
+            android:id="@+id/menu_account_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="欢迎使用易停车"/>
     </LinearLayout>
     <ImageView
         android:id="@+id/login_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:src="@drawable/login_btn"
+        android:scaleType="centerInside"
         android:visibility="gone"/>
     <ImageView
         android:layout_width="match_parent"
