--- a/app/src/main/res/layout/activity_first_loading.xml
+++ b/app/src/main/res/layout/activity_first_loading.xml
@@ -40,7 +40,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="飞飞停车"
+            android:text="易停车"
             android:textColor="#FFFFFF"
             android:textSize="16pt"
             />
