--- a/app/src/main/res/layout/park_info.xml
+++ b/app/src/main/res/layout/park_info.xml
@@ -6,50 +6,63 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="57.7dp"
         android:layout_marginTop="24.3dp"
-        android:paddingLeft="12.6dp"
-        android:paddingRight="12.6dp"
+
         android:layout_alignParentTop="true"
         android:orientation="vertical"
         android:background="@color/listview_bg_color">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="12.6dp"
+            android:paddingRight="12.6dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/park_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
+                android:textSize="14sp"
+                android:textColor="@color/black"
                 android:text="***停车场"/>
             <TextView
                 android:id="@+id/park_site"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/text_color_grey"
+                android:textSize="12sp"
                 android:text="车位"/>
             </LinearLayout>
 
         <TextView
             android:id="@+id/park_address"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="12.6dp"
+            android:paddingRight="12.6dp"
             android:singleLine="true"
+            android:gravity="center"
+            android:textColor="@color/text_color_grey"
+            android:textSize="12sp"
             android:text="地址"/>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/divider_line"/>
-        <TextView
-            android:id="@+id/detail_btn"
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="30.6dp"
-            android:gravity="center"
-            android:text="详情 >"/>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/detail_btn"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:textColor="@color/text_color_grey"
+        android:textSize="12sp"
+        android:text="详情 >"/>
     <TextView
         android:id="@+id/park_navi_btn"
         android:layout_width="48.6dp"
