--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -9,7 +9,7 @@
         android:id="@+id/back"
         android:layout_width="30dp"
         android:layout_height="20dp"
-        android:src="@drawable/xml_selector_button_back"
+        android:src="@drawable/icon_back"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dip"
         android:focusableInTouchMode="false"
