--- a/app/src/main/res/layout/park_info.xml
+++ b/app/src/main/res/layout/park_info.xml
@@ -6,18 +6,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="57.7dp"
+        android:layout_height="57.6dp"
         android:layout_marginTop="24.3dp"
-
         android:layout_alignParentTop="true"
         android:orientation="vertical"
         android:background="@color/listview_bg_color">
         <LinearLayout
+            android:layout_marginTop="3dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:paddingLeft="12.6dp"
             android:paddingRight="12.6dp"
-            android:gravity="center_vertical"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/park_name"
@@ -40,11 +39,10 @@
         <TextView
             android:id="@+id/park_address"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:paddingLeft="12.6dp"
             android:paddingRight="12.6dp"
             android:singleLine="true"
-            android:gravity="center"
             android:textColor="@color/text_color_grey"
             android:textSize="12sp"
             android:text="地址"/>
@@ -62,7 +60,8 @@
         android:gravity="center"
         android:textColor="@color/text_color_grey"
         android:textSize="12sp"
-        android:text="详情 >"/>
+        android:text="详情 >"
+        android:background="@color/listview_bg_color"/>
     <TextView
         android:id="@+id/park_navi_btn"
         android:layout_width="48.6dp"
